<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobilePass</string>
    <string name="hello_world">Hello world!</string>
    <string name="display_tv_str">Display</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="description">description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="introduction">MobilePass allows you sign in without typing any passcode.</string>
    <string name="application_name_company">Application:</string>
    <string name="ip_address">IP Address:</string>
    <string name="app_msg">Message:</string>
    <string name="date_time">Date &amp; Time:</string>
    <string name="bt_approve">Approve</string>
    <string name="bt_deny">Deny</string>
    <string name="coming_request">Coming Request</string>
    <string name="deepnet_security">Deepnet Security</string>
    <string name="powered_by">POWERED BY</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_dummy_test">broadcasts_dummy_test</string>
    <string name="action_dummy_accounts_test">accounts_dummy_test</string>
    <string name="accounts_name">Accounts</string>
    <string name="app_logo_content_description">Company application logo</string>
    <string name="bt_scanner">Scan barcode</string>
    <string name="default_str">default</string>
    <string name="tv_see_all">See all</string>
    <string name="display">Display</string>

</resources>