<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_pager_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/bts_approve_deny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_16dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/bt_approve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_approve" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/bt_deny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_deny" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bts_approve_deny"
        android:layout_alignParentTop="true" >

        <ScrollView
            android:id="@+id/scroll_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideOverlay" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_logo_content_description"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/introduction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/introduction"
                        android:paddingLeft="@dimen/padding_32dp"
                        android:paddingRight="@dimen/padding_32dp"
                        android:paddingTop="@dimen/padding_16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_coming_request_debug"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/padding_32dp"
                            android:paddingTop="@dimen/padding_16dp"
                            android:text="@string/coming_request" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@android:color/black" />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_4dp" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="@dimen/padding_32dp"
                                android:paddingRight="@dimen/padding_32dp"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/application_name_company" />

                            <TextView
                                android:id="@+id/tv_app_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/default_str" />
                        </TableRow>

                        <include layout="@layout/line_using_view" />

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_4dp" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="@dimen/padding_32dp"
                                android:paddingRight="@dimen/padding_32dp"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/app_msg" />

                            <TextView
                                android:id="@+id/tv_app_msg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/default_str" />
                        </TableRow>

                        <include layout="@layout/line_using_view" />

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_4dp" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="@dimen/padding_32dp"
                                android:paddingRight="@dimen/padding_32dp"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/ip_address" />

                            <TextView
                                android:id="@+id/tv_ip_address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/default_str" />
                        </TableRow>

                        <include layout="@layout/line_using_view" />

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_4dp" >

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="@dimen/padding_32dp"
                                android:paddingRight="@dimen/padding_32dp"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/date_time" />

                            <TextView
                                android:id="@+id/tv_date_time"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="left"
                                android:paddingTop="@dimen/padding_16dp"
                                android:text="@string/default_str" />
                        </TableRow>

                        <include layout="@layout/line_using_view" />
                    </TableLayout>
                    <!--
                    <View
                        android:id="@+id/more_content_indicater"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#cccccc"
                        android:paddingTop="20dp" />
                    -->

                    <RelativeLayout
                        android:id="@+id/more_content_view_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector_see_all_bar"
                        android:clickable="true" >

                        <TextView
                            android:id="@+id/tv_see_all"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:paddingTop="@dimen/padding_16dp"
                            android:text="@string/tv_see_all" />

                        <ImageView
                            android:id="@+id/iv_more_content_indicater"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/ic_expand_more" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_more_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <include layout="@layout/footer_include" />

</RelativeLayout>